--- a/docker/kaldi/dockerfile
+++ b/docker/kaldi/dockerfile
@@ -1,5 +1,4 @@
 FROM nvidia/cuda:10.0-cudnn7-devel-ubuntu18.04
-LABEL maintainer="mdoulaty@gmail.com"
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
@@ -62,7 +61,7 @@ RUN curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
 RUN python3.8 get-pip.py
 
 # install python dependencies
-RUN pip3.8 install pandas pythainlp==2.3.1
+RUN pip3.8 install pandas tqdm
 
 # back to workdir
 WORKDIR /opt/kaldi
